[package]
name = "egui_glfw"
version = "0.6.0"
authors = ["ishbosamiya <ishbosamiya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.23" }
glfw = "0.53"
gl = "0.14"
nalgebra-glm = "0.18"

[dev-dependencies]
copypasta-ext = "0.4"
egui_demo_lib = "0.23"
egui_extras = { version = "0.23", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] }

[[example]]
name = "simple_gui"

[[example]]
name = "demo_app"