[package]
name = "egui_glfw"
# NOTE_FOR_RELEASE: update README.md
#
# * Dependency versions - update supported version
#
# * Usage - update with release version
version = "0.7.1+dev"
authors = ["ishbosamiya <ishbosamiya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.28" }
glfw = "0.58"
gl = "0.14"
nalgebra-glm = "0.18"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
copypasta-ext = "0.4"
egui_demo_lib = "0.28"
egui_extras = { version = "0.28", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] }

[features]
default = ["tracing"]

[[example]]
name = "simple_gui"

[[example]]
name = "demo_app"