[package]
name = "egui_glfw"
# NOTE_FOR_RELEASE: update README.md
#
# * Dependency versions - update supported version
#
# * Usage - update with release version
version = "0.9.0"
authors = ["ishbosamiya <ishbosamiya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.29" }
glfw = "0.59"
gl = "0.14"
nalgebra-glm = "0.18"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
copypasta-ext = "0.4"
egui_demo_lib = "0.29"
egui_extras = { version = "0.29", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] }

[features]
default = ["tracing"]

[[example]]
name = "simple_gui"

[[example]]
name = "demo_app"